<resources>
    <string name="app_name">IoT Home</string>
    <string name="weatherMenu">Pogoda</string>
    <string name="settingsMenu">Ustawienia</string>

    <!-- GENERAL NAMES -->
    <string name="version">version 0.0.1</string>
    <string name="copyright">Copyright 2017 by Admin</string>
    <string name="open_drawer">Otwórz szufladę</string>
    <string name="close_drawer">Zamknij szufladę</string>
    <string name="action_refresh">Odśwież</string>
    <string name="openedDrawer">Wybierz z listy:</string>
    <string name="noConnection">Brak połączenia z serwisem!</string>
    <string name="check_connection">Sprawdź połączenie</string>

    <string name="positiveButton">OK</string>
    <string name="negativeButton">Cancel</string>


    <!-- MAIN FRAGMENT -->
    <string name="titleMain">Fragment MainFragment</string>
    <string name="nameApp">RPi IoT Home System</string>
    <string name="subNameApp">Aplikacja mobilna</string>

    <!-- REGISTRATION STRINGS -->
    <string name="preferencesTitle">Rejestracja użytkownika</string>
    <string name="titleRegistration">Podaj nazwę Użytkownika i hasło</string>
    <string name="contRegistration">Idź dalej</string>
    <string name="textRegistration">Przejdź do Ustawień celem rejestracji Użytkownika w systemie</string>

    <!-- PREFERENCES STRINGS -->
    <string name="confTitle">Ustawienia</string>
    <string name="setUser">Podaj nazwę użytkownika</string>
    <string name="setIP">Podaj IP RPi</string>
    <string name="action_set">Ustaw</string>
    <string name="action_cancel">Usuń</string>

    <!-- WHEATHER STRINGS -->
    <string name="weatherTitle">Pogoda</string>
    <string name="emptyValue">--</string>
    <string name="emptyTimeValue">--:--</string>
    <string name="emptyDateValue">--.--</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="tempUnit">°C</string>
    <string name="humUnit">%</string>
    <string name="pressUnit">hPa</string>
    <string name="timeDesc">Aktualizacja:</string>

    <!-- PREFERENCES -->
    <string name="titleSettings">Podstawowe ustawienia</string>
    <string name="userSettingsTitle">Użytkownik</string>
    <string name="userSettingsMsg">Edytuj nazwę użytkownika</string>
    <string name="passSettingsTitle">Hasło</string>
    <string name="passSettingsMsg">Podaj hasło</string>
    <string name="ipSettingsTitle">IP/adres serwera</string>
    <string name="ipSettingsMsg">Edytuj adres lub IP serwera</string>
    <string name="ipSettingsTitle2">Adres serwera</string>
    <string name="registerSettings">Rejestruj</string>
    <string name="sumSettings">Zarejestruj używająć podanego użytkownika i IP</string>
    <string name="userResetButton">Resetuj</string>
    <string name="userResetInfo">Resetuj Użytkownika i Hasło</string>
    <string name="yesNoTitle">Uwaga</string>
    <string name="yesNoMsg">Czy jesteś pewny, że chcesz usunąć dane Użytkownika oraz hasło?</string>
    <string name="yesNoYes">Tak</string>
    <string name="yesNoNo">Nie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
