<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/titleSettings">
        <EditTextPreference
            android:key="logUser"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:selectable="false"/>
        <EditTextPreference
            android:dialogTitle="@string/ipSettingsTitle"
            android:key="ipKey"
            android:summary=""
            android:positiveButtonText="@string/positiveButton"
            android:negativeButtonText="@string/negativeButton"
            android:dialogMessage="@string/ipSettingsMsg"
            android:title="@string/ipSettingsTitle2" />
        <Preference
            android:title="@string/registerSettings"
            android:key="reg"
            android:summary="@string/sumSettings"/>
        <Preference
            android:title="@string/userResetButton"
            android:key="reset"
            android:summary="@string/userResetInfo"/>
    </PreferenceCategory>

</PreferenceScreen>