<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WeatherActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:stretchColumns="0,1,2">

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/tabBack"
            android:gravity="center"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/inTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/in"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/font"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/tabBack"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TableRow
                android:id="@+id/tableRow14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/tempicon" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <TextView
                    android:id="@+id/inTempTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/emptyValue"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="35sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:nextFocusRight="@id/tableRow1">

                <TextView
                    android:id="@+id/tUnitTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempUnit"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="35sp" />
            </TableRow>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/tabBack"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:paddingTop="5dp"
                    android:src="@drawable/humicon" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <TextView
                    android:id="@+id/inHumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/emptyValue"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow17"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hUnitTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humUnit"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="30sp" />

            </TableRow>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/tabBack"
            android:gravity="center"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/outTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/out"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/font"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/tabBack"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/tempicon" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <TextView
                    android:id="@+id/outTempTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/emptyValue"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="35sp" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tUnitTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempUnit"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="35sp" />

            </TableRow>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/tabBack"
            android:paddingBottom="10dp">

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:paddingTop="5dp"
                    android:src="@drawable/humicon" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/outHumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/emptyValue"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow23"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hUnitTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humUnit"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="30sp" />
            </TableRow>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/tabBack"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TableRow
                android:id="@+id/tableRow13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/pressicon" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/pressureTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/emptyValue"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/pUnitTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pressUnit"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="30sp" />

            </TableRow>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow26"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/tabBack"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">


            <TableRow
                android:id="@+id/tableRow27"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/timeDesc"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow28"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="right"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/timeValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/emptyTimeValue"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/dateValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/emptyDateValue"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/font"
                    android:textSize="15sp" />

            </TableRow>
        </TableRow>
    </TableLayout>
</RelativeLayout>
